--- a/exercises/jokes/templates/base.html
+++ b/exercises/jokes/templates/base.html
@@ -2,45 +2,57 @@
 
 <head>
     <title>Flask for Fun</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
     <div>
         <div><a href="/">Home</a></div>
         <div>
-            <h2>Pick the category, language, and number of jokes to hear</h2>
+            <h2 class="text-center --bs-blue">Pick the category, language, and number of jokes to hear</h2>
         </div>
         <form method="POST">
-            <div>
+            <div class="container-fluid text-center">
                 <div>
                     <label for="category" value="Category">Category</label>
                     <select name="category" id="selCat">
-                        <!-- TODO: Populate categories -->
+                        <option value="all">All</option>
+                        <option value="neutral">Neutral</option>
+                        <option value="chuck">Chuck Norris</option>
                     </select>
                 </div>
                 <div>
                     <label for="language" value="Language">Language</label>
                     <select name="language" id="selLang">
-                        <!-- TODO: Populate languages -->
+                        <option value="en">EN</option>
+                        <option value="es">ES</option>
+                        <option value="de">DE</option>
                     </select>
                 </div>
                 <div>
                     <label for="number" value="Number">Number</label>
                     <select name="number" id="selNum">
-                        <!-- TODO: Populate numbers -->
+                        <option value="1">1</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
                     </select>
                 </div>
             </div>
-            <div>
+            <div class="container-fluid text-center">
                 <div>
-                    <button type="submit" id="btnAmuse" value="Tell me a joke">Amuse me</button>
+                    <button class="btn-joke" type="submit" id="btnAmuse" value="Tell me a joke">Amuse me</button>
                 </div>
             </div>
         </form>
-        <div id="jokes">
-            <!-- This is a placeholder for jokes -->
+        <div id="jokes" class="container-fluid text-center">
+            {% block content %}
+            <!-- ... -->
+            {% endblock %}
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
