--- a/exercises/geo/templates/country.html
+++ b/exercises/geo/templates/country.html
@@ -1,1 +1,40 @@
 {% extends "base.html" %}
+
+{% block content %}
+
+<h1 class="title">Countries</h1>
+{% if form %}
+    <p>Select a country below</p>
+    <form method="POST">
+        <select name="country">
+            {% for tuple in countries %}
+            {% for country in tuple %}
+            <option value="{{ country }}">{{ country }}</option>
+            {% endfor %}
+            {% endfor %}
+        </select><br/>
+        <input type="submit" class="button is-primary" value="submit"/>
+    </form>
+{% endif %}
+{% if not form %}
+    <table class="table">
+        <tr>
+            <th>Country</th>
+            <th>Continent</th>
+            <th>Region</th>
+            <th>Capital</th>
+            <th>Surface Area</th>
+            <th>Population</th>
+            <th>Government Form</th>
+            <th>Head of State</th>
+        </tr>
+        {% for tuple in result %}
+        <tr>
+            {% for data in tuple %}
+            <td>{{data}}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
+{% endif %}
+{% endblock %}
