--- a/projects/farm/templates/cart.html
+++ b/projects/farm/templates/cart.html
@@ -14,7 +14,7 @@
         {{item[0].quantity}} x {{item[1].name}}  
       </div>
       <div class="column">
-        <b><a href="{{url_for('remove_from_cart', item_id=item[0].id)}}">Remove</a></b>
+        <b><a href="{{url_for('remove_from_cart', item_id=item[0].c_id)}}">Remove</a></b>
       </div>
     </div> 
   </div>
