--- a/projects/farm/templates/index.html
+++ b/projects/farm/templates/index.html
@@ -24,7 +24,7 @@
           <p>{{product.description}}</p>
         </div>
         <div class="column">
-          <b><a href="{{url_for('add_to_cart', product_id=product.id)}}">Add to Cart</a></b>
+          <b><a href="{{url_for('add_to_cart', product_id=product.p_id)}}">Add to Cart</a></b>
         </div>
       </div>
     </div>
