--- a/projects/farm/templates/admin.html
+++ b/projects/farm/templates/admin.html
@@ -14,10 +14,10 @@
         <b>{{product.name}}</b> 
       </div>
       <div class="column">
-        <a href="{{url_for('edit_product', product_id=product.id)}}">Edit</a>
+        <a href="{{url_for('edit_product', product_id=product.p_id)}}">Edit</a>
       </div>
       <div class="column">
-        <a href="{{url_for('delete_product', product_id=product.id)}}">Delete</a>
+        <a href="{{url_for('delete_product', product_id=product.p_id)}}">Delete</a>
       </div>
     </div>
   </div>
