--- a/projects/farm/templates/edit_product.html
+++ b/projects/farm/templates/edit_product.html
@@ -1,26 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Edit Product</h1>
+<section class="hero is-primary">
+  <h1>Edit Product</h1>
+  <button class="button is-light" onclick="location.href='/admin'">Exit Without Edit</button>
+</section>
 
-<form method="POST">
 
-  <div class="form-group">
-    <label>Name</label>
-    <input type="text" name="name" value="{{ product.name }}" class="form-control">
+<section class="hero is-warning">
+  <div class="hero-body">
+    <form method="POST">
+
+      <div class="form-group">
+        <label>Name</label>
+        <input class="input" type="text" name="name" value="{{ product.name }}" class="form-control">
+      </div>
+
+      <div class="form-group">  
+        <label>Description</label>
+        <textarea class="textarea" name="description" class="form-control">{{ product.description }}</textarea>
+      </div>
+
+      <div class="form-group">
+        <label>Price</label>
+        <input class="input" type="number" name="price" value="{{ product.price }}" step="0.01" class="form-control">
+      </div>
+
+      <button class="button is-success" type="submit" class="btn btn-primary">Save</button>
+
+    </form>
   </div>
-
-  <div class="form-group">  
-    <label>Description</label>
-    <textarea name="description" class="form-control">{{ product.description }}</textarea>
-  </div>
-
-  <div class="form-group">
-    <label>Price</label>
-    <input type="number" name="price" value="{{ product.price }}" step="0.01" class="form-control">
-  </div>
-
-  <button type="submit" class="btn btn-primary">Save</button>
-
-</form>
+</section>
 {% endblock %}
