--- a/projects/farm/templates/add_product.html
+++ b/projects/farm/templates/add_product.html
@@ -8,28 +8,28 @@
 
 <section class="hero is-warning">
   <div class="hero-body">
-    <form method="POST">
+    <form class="form" method="POST">
       <div class="form-group">
         <label>Name:</label>
-        <input name="name" placeholder="Name">
+        <input class="input" name="name" placeholder="Name">
       </div>
       
       <div class="form-group">
         <label>Desc:</label>
-        <input name="description" placeholder="Description">
+        <textarea class="textarea form-control" name="description" placeholder="Description"></textarea>
       </div>
 
       <div class="form-group">
         <label>Price:</label>
-        <input name="price" placeholder="Price">
+        <input class="input" name="price" placeholder="Price">
       </div>
 
       <div class="form-group">
         <label>Image:</label>
-        <input name="image" placeholder="Image URL">
+        <input class="input" name="image" placeholder="Image URL">
       </div>  
 
-      <button type="submit">Submit</button>
+      <button class="button is-success" type="submit">Submit</button>
     </form>
   </div>
 </section>
