--- a/projects/farm/templates/index.html
+++ b/projects/farm/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="hero is-primary">
   <h1 class="text">Farm to Table</h1>
-  <button class="button is-light" onclick="location.href='/cart'">My Cart</button>
+  <button class="button is-primary" onclick="location.href='/cart'">My Cart</button>
 </section>
 
 <h2 class="text">Available Products:</h2>
@@ -20,7 +20,7 @@
           </figure>
         </div>
         <div class="column">
-          <b>{{product.name}}</b> - ${{product.price}}
+          <b>{{product.name}} - ${{product.price}}</b>
           <p>{{product.description}}</p>
         </div>
         <div class="column">
